--- a/weekly_mission/nav.html
+++ b/weekly_mission/nav.html
@@ -1,16 +1,16 @@
 <!-- nav디자인 탬플릿 입니다!! -->
 <html>
-
+<link href="css/global.css" rel="stylesheet">
 
 <link href="css/nav.css" rel="stylesheet">
 <nav class="nav">
-	<div class="nav-container">
-		<a class="nav-logo" href="index.html">
+	<div class="nav__contents">
+		<a class="nav__logo" href="index.html">
 			<img src="images/Linkbrary.svg">
 		</a>
 
-		<a class="nav-login_button" href = 'login.html'>
-			<p class="nav-login-label">로그인</p>
+		<a class="nav__login-button" href = 'login.html'>
+			<p class="nav__login-label">로그인</p>
 		</a>
 
 	</div>
