--- a/weekly_mission/footer.html
+++ b/weekly_mission/footer.html
@@ -1,24 +1,24 @@
 <!-- 이건 footer를 만들기 위해 제공하는 탬플릿 입니다 -->
 <html>
 
-
+<link href="css/global.css" rel="stylesheet">
 
 <link href="css/footer.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
 <footer class="footer">
-	<div class="footer-frame">
-		<div class="footer-components">
+	<div class="footer__frame">
+		<div class="footer__contents">
 
-			<a class="footer-codeit">©codeit - 2023</a>
-			<div class="footer-linkbox">
-				<a href="#" class="footer-policy">
+			<a class="footer__codeit">©codeit - 2023</a>
+			<div class="footer__linkbox">
+				<a href="#" class="footer__policy">
 					Privacy Policy
 				</a>
-				<a href="#" class="footer-FAQ">
+				<a href="#" class="footer__FAQ">
 					FAQ
 				</a>
 			</div>
-			<div class="footer-Icons">
+			<div class="footer__icon-box">
 				<a href="https://www.facebook.com/" target="_blank">
 					<img src="images/facebook_logo.svg">
 				</a>
