--- a/weekly_mission/login.html
+++ b/weekly_mission/login.html
@@ -6,9 +6,9 @@
 <head>
 	<link rel='stylesheet'
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-	<link href="css/login_signup.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
+	<link href="css/auth.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/password-visible.js"></script>
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
@@ -16,7 +16,7 @@
 	<meta name="author" content="SeungRyeolBaek">
 	<meta property="og:title" content="Linkbrary" />
 	<meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요." />
-	<meta property="og:image" content="images/library.png />
+	<meta property="og:image" content="images/library.png" />
 	<meta property="og:url" content="https://seungryeolbaek-sprint-weekly.netlify.app/" />
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image">
@@ -26,15 +26,15 @@
 	<meta property="twitter:url" content="https://seungryeolbaek-sprint-weekly.netlify.app/" />
 </head>
 
-<body class="background">
+<body class="auth-background">
 
 	<div class="login-content">
-		<div class="frame1">
-			<div class="logo-and-link">
-				<a class="logo" href="index.html">
+		<form class="auth__login-form">
+			<div class="auth-route">
+				<a class="auth-route__home" href="index.html">
 					<img src="images/Linkbrary.svg" alt="Link-brary 로고">
 				</a>
-				<div class="link-container">
+				<div class="auth-route__hyperlink">
 					<div class="non-link">
 						회원이 아니신가요?
 					</div>
@@ -43,30 +43,30 @@
 					</a>
 				</div>
 			</div>
-			<div class="form">
-				<div class="input-frame">
-					<div class="small-text">
+			<div class="login-contents__input-form">
+				<div class="auth__input-entry">
+					<div class="auth__label">
 						이메일
 					</div>
-					<input class="user-input" type="email" />
+					<input class="auth__input-field" type="email" />
 				</div>
-				<div class="input-frame">
-					<div class="small-text">
+				<div class="auth__input-entry">
+					<div class="auth__label">
 						비밀번호
 					</div>
 					<div class="input-binder">
-						<input class="user-input" type="password" />
+						<input class="auth__input-field" type="password" />
 						<i class="fa fa-eye fa-lg password-visible"></i>
 					</div>
 				</div>
 			</div>
-			<button class="submit-button">
-				<p class="label">로그인</p>
+			<button class="auth__submit-button">
+				<p>로그인</p>
 			</button>
-		</div>
-		<div class="frame2">
-			<div class="small-text">소셜 로그인</div>
-			<div class="logos">
+		</form>
+		<div class="auth__social-auth">
+			<div class="auth__label">소셜 로그인</div>
+			<div class="auth__social-link">
 				<a href="https://www.google.com/">
 					<img src="images/google_logo.svg" alt="구글 소셜 로그인 링크">
 				</a>
