--- a/weekly_mission/signup.html
+++ b/weekly_mission/signup.html
@@ -5,9 +5,9 @@
 <head>
 	<link rel='stylesheet'
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-	<link href="css/login_signup.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
+	<link href="css/auth.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/password-visible.js"></script>
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
@@ -25,15 +25,15 @@
 	<meta property="twitter:url" content="https://seungryeolbaek-sprint-weekly.netlify.app/" />
 </head>
 
-<body class="background">
+<body class="auth-background">
 
 	<div class="signup-content">
-		<div class="frame1">
-			<div class="logo-and-link">
-				<a class="logo" href="index.html">
+		<form class="auth__signup-form">
+			<div class="auth-route">
+				<a class="auth-route__home" href="index.html">
 					<img src="images/Linkbrary.svg" alt="Link-brary 로고">
 				</a>
-				<div class="link-container">
+				<div class="auth-route__hyperlink">
 					<div class="non-link">
 						이미 회원이신가요?
 					</div>
@@ -42,39 +42,39 @@
 					</a>
 				</div>
 			</div>
-			<div class="form">
-				<div class="input-frame">
-					<div class="small-text">
+			<div class="signup-content__input-form">
+				<div class="auth__input-entry">
+					<div class="auth__label">
 						이메일
 					</div>
-					<input class="user-input" type="email">
+					<input class="auth__input-field" type="email">
 				</div>
-				<div class="input-frame">
-					<div class="small-text">
+				<div class="auth__input-entry">
+					<div class="auth__label">
 						비밀번호
 					</div>
 					<div class="input-binder">
-						<input class="user-input" type="password" />
+						<input class="auth__input-field" type="password" />
 						<i class="fa fa-eye fa-lg password-visible"></i>
 					</div>
 				</div>
-				<div class="input-frame">
-					<div class="small-text">
+				<div class="auth__input-entry">
+					<div class="auth__label">
 						비밀번호 확인
 					</div>
 					<div class="input-binder">
-						<input class="user-input" type="password" />
+						<input class="auth__input-field" type="password" />
 						<i class="fa fa-eye fa-lg password-visible"></i>
 					</div>
 				</div>
 			</div>
-			<button class="submit-button">
-				<p class="label">회원가입</p>
+			<button class="auth__submit-button">
+				<p>회원가입</p>
 			</button>
-		</div>
-		<div class="frame2">
-			<div class="small-text">다른 방식으로 가입하기</div>
-			<div class="logos">
+		</form>
+		<div class="auth__social-auth">
+			<div class="auth__label">다른 방식으로 가입하기</div>
+			<div class="auth__social-link">
 				<a href="https://www.google.com/">
 					<img src="images/google_logo.svg" alt="구글 sns 링크">
 				</a>
