feat: reset.css 추가
-reset.css 추가 및 일괄 적용

--- a/weekly_mission/footer.html
+++ b/weekly_mission/footer.html
@@ -1,6 +1,6 @@
 <!-- 이건 footer를 만들기 위해 제공하는 탬플릿 입니다 -->
 <html>
-
+<link href="css/reset.css" rel="stylesheet">
 <link href="css/global.css" rel="stylesheet">
 
 <link href="css/footer.css" rel="stylesheet">
