--- a/weekly_mission/nav.html
+++ b/weekly_mission/nav.html
@@ -1,5 +1,6 @@
 <!-- nav디자인 탬플릿 입니다!! -->
 <html>
+<link href="css/reset.css" rel="stylesheet">
 <link href="css/global.css" rel="stylesheet">
 
 <link href="css/nav.css" rel="stylesheet">
@@ -9,7 +10,7 @@
 			<img src="images/Linkbrary.svg">
 		</a>
 
-		<a class="nav__login-button" href = 'login.html'>
+		<a class="nav__login-button" href='login.html'>
 			<p class="nav__login-label">로그인</p>
 		</a>
 
