--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Linkbrary</title>
+	<link href="css/reset.css" rel="stylesheet">
 	<link rel='stylesheet'
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
 	<link href="css/nav.css" rel="stylesheet">
