--- a/weekly_mission/signup.html
+++ b/weekly_mission/signup.html
@@ -3,6 +3,7 @@
 <title>Linkbrary - Sign Up</title>
 
 <head>
+	<link href="css/reset.css" rel="stylesheet">
 	<link rel='stylesheet'
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
