--- a/weekly_mission/login.html
+++ b/weekly_mission/login.html
@@ -17,13 +17,13 @@
 	<meta name="author" content="SeungRyeolBaek">
 	<meta property="og:title" content="Linkbrary" />
 	<meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요." />
-	<meta property="og:image" content="images/library.png" />
+	<meta property="og:image" content="https://seungryeolbaek-sprint-weekly.netlify.app/images/library.png" />
 	<meta property="og:url" content="https://seungryeolbaek-sprint-weekly.netlify.app/" />
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Linkbrary">
 	<meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
-	<meta name="twitter:image" content="images/library.png">
+	<meta name="twitter:image" content="https://seungryeolbaek-sprint-weekly.netlify.app/images/library.png">
 	<meta property="twitter:url" content="https://seungryeolbaek-sprint-weekly.netlify.app/" />
 </head>
 
