버튼 type=submit 삭제

--- a/Linkbrary.html
+++ b/Linkbrary.html
@@ -23,7 +23,7 @@
       <div class="section_1">
         <div>
           <h2><span>세상의 모든 정보</span>를<br>쉽게 저장하고 관리해 보세요</h2>
-          <a href="signin.html"><button type="submit" class="link_plus_btn">링크 추가하기</button></a>
+          <a href="signin.html"><button class="link_plus_btn">링크 추가하기</button></a>
         </div>
         <div>
           <img src="image/img.png" alt="link search" class="link_search" width="1200" height="590">
