feat: 로그인 페이지에 에러메시지 로직 구현
- 잘못된 입력에 대해 에러메시지와 함께 입력 필드 테두리 빨갛게 변함
- 이메일: test@codeit.com, 비밀번호: codeit101 으로 로그인 시도할 경우, “/folder” 페이지로 이동

--- a/weekly_mission/index.html
+++ b/weekly_mission/index.html
@@ -1,5 +1,7 @@
-<html lang="ko">
 
+<!DOCTYPE html>
+
+<html lang="ko">
 <head>
 	<title>Linkbrary</title>
 	<link href="css/reset.css" rel="stylesheet">
@@ -134,10 +136,10 @@
 
 			<a class="footer__codeit">©codeit - 2023</a>
 			<div class="footer__linkbox">
-				<a href="#" class="footer__policy">
+				<a href="policy.html" class="footer__policy">
 					Privacy Policy
 				</a>
-				<a href="#" class="footer__FAQ">
+				<a href="faq.html" class="footer__FAQ">
 					FAQ
 				</a>
 			</div>
