--- a/weekly_mission/nav.html
+++ b/weekly_mission/nav.html
@@ -1,4 +1,6 @@
 <!-- nav디자인 탬플릿 입니다!! -->
+<!DOCTYPE html>
+
 <html>
 <link href="css/reset.css" rel="stylesheet">
 <link href="css/global.css" rel="stylesheet">
