--- a/weekly_mission/footer.html
+++ b/weekly_mission/footer.html
@@ -1,4 +1,6 @@
 <!-- 이건 footer를 만들기 위해 제공하는 탬플릿 입니다 -->
+<!DOCTYPE html>
+
 <html>
 <link href="css/reset.css" rel="stylesheet">
 <link href="css/global.css" rel="stylesheet">
@@ -11,10 +13,10 @@
 
 			<a class="footer__codeit">©codeit - 2023</a>
 			<div class="footer__linkbox">
-				<a href="#" class="footer__policy">
+				<a href="policy.html" class="footer__policy">
 					Privacy Policy
 				</a>
-				<a href="#" class="footer__FAQ">
+				<a href="faq.html" class="footer__FAQ">
 					FAQ
 				</a>
 			</div>
