Linkbrary html 및 css 수정

--- a/Linkbrary.html
+++ b/Linkbrary.html
@@ -19,38 +19,46 @@
         <button type="submit" class="login_btn">로그인</button>
       </a>
     </header>
-    <div class="container">
-      <div class="section_1">
-        <div>
+
+    <!-- contents-01 -->
+    <section class="section_1">
+      <div class="section_1_contents">
+        <div class="section_1_text">
           <h2><span>세상의 모든 정보</span>를<br>쉽게 저장하고 관리해 보세요</h2>
-          <a href="signin.html"><button class="link_plus_btn">링크 추가하기</button></a>
+        </div>
+        <a href="signin.html"><button class="link_plus_btn">링크 추가하기</button></a>
+        <div>
+          <img src="image/img.png" alt="link search" class="main_img">
+        </div>
+      </div>
+    </section>
+
+    <!-- contents-02 -->
+    <section class="section_2">
+      <div class="middle">
+        <div class="section_2_text">
+          <h3><span class="colorname_1">원하는 링크</span>를<br>저장하세요</h3>
+          <p class="description">
+            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>
+            사고 싶은 옷, 기억하고 싶은 모든 것을<br>
+            한 공간에 저장하세요.<br>
+          </p>
         </div>
         <div>
-          <img src="image/img.png" alt="link search" class="link_search" width="1200" height="590">
+          <img src="image/img1.png" alt="save link" class="section_2_img">
         </div>
       </div>
-      <div class="section_2">
+    </section>
+
+    <!-- contents-03 -->
+    <section>
+      <div class="section_common">
         <div class="middle">
-          <div class="text">
-            <h3><span>원하는 링크</span>를<br>저장하세요</h3>
-            <p class="description">
-              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br>
-              사고 싶은 옷, 기억하고 싶은 모든 것을<br>
-              한 공간에 저장하세요.<br>
-            </p>
+          <div>
+            <img src="image/img2.png" alt="folder link" class="section_3_img">
           </div>
-          <div class="img">
-            <img src="image/img1.png" alt="save link" width="550" height="450">
-          </div>
-        </div>
-      </div>
-      <div class="section_3">
-        <div class="middle">
-          <div class="img">
-            <img src="image/img2.png" alt="folder link" width="550" height="450">
-          </div>
-          <div class="text">
-            <h3>링크를 폴더로<br><span>관리</span>하세요</h3>
+          <div class="section_common_text">
+            <h3>링크를 폴더로<br><span class="colorname_2">관리</span>하세요</h3>
             <p class="description">
               나만의 폴더를 무제한으로 만들고<br>
               다양하게 활용할 수 있습니다.<br>
@@ -58,36 +66,44 @@
           </div>
         </div>
       </div>
-      <div class="section_4">
+    </section>
+
+    <!-- contents-04 -->
+    <section>
+      <div class="section_common">
         <div class="middle">
-          <div class="text">
-            <h3>저장한 링크를<br><span>공유</span>해 보세요.</h3>
+          <div class="section_common_text">
+            <h3>저장한 링크를<br><span class="colorname_3">공유</span>해 보세요</h3>
             <p class="description">
               여러 링크를 폴더에 담고 공유할 수 있습니다.<br>
               가족, 친구, 동료들에게 쉽고 빠르게 링크를<br>
-              공유해 보세요.<br>
+              공유해 보세요.
             </p>
           </div>
-          <div class="img">
-            <img src="image/img3.png" alt="share link" width="550" height="450">
+          <div>
+            <img src="image/img3.png" alt="share link" class="section_4_img">
           </div>
         </div>
       </div>
-      <div class="section_5">
+    </section>
+
+    <!-- contents-05 -->
+    <section>
+      <div class="section_common">
         <div class="middle">
-          <div class="img">
-            <img src="image/img4.png" alt="find link" width="550" height="450">
+          <div>
+            <img src="image/img4.png" alt="find link" class="section_5_img">
           </div>
-          <div class="text">
-            <h3>저장한 링크를<br><span>검색</span>해 보세요</h3>
+          <div class="section_common_text">
+            <h3>저장한 링크를<br><span class="colorname_4">검색</span>해 보세요</h3>
             <p class="description">
               중요한 정보들을 검색으로 쉽게 찾아보세요.<br>
             </p>
           </div>
         </div>
       </div>
-    </div>
-
+    </section>
+    
     <footer>
       <div class="footer">
         <div class="footer_info">
