--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./CSS/main.css" />
-    <link rel="stylesheet" href="./CSS/common.css" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta property="og:url" content="https://linkbrary-eunji.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://ifh.cc/g/lqjlHT.jpg" />
+    <meta property="og:title" content="Linkbrary" />
+    <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해보세요" />
+    <link rel="stylesheet" href="./Styles/main.css" />
+    <link rel="stylesheet" href="./Styles/common.css" />
     <title>Linkbrary</title>
   </head>
   <body>
@@ -14,87 +20,151 @@
     </nav>
     <header>
       <section class="intro">
-        <h1>
-          <span class="grad">세상의 모든 정보</span>를<br />
-          쉽게 저장하고 관리해 보세요
-        </h1>
+        <div class="pc">
+          <h1>
+            <span class="grad">세상의 모든 정보</span>를<br />
+            쉽게 저장하고 관리해 보세요
+          </h1>
+        </div>
+        <div class="tablet mobile hidden">
+          <h1>
+            <span class="grad">세상의 모든 정보</span>를<br />
+            쉽게 저장하고<br />관리해 보세요
+          </h1>
+        </div>
         <a href="./signup.html" class="button-grad signup">링크 추가하기</a>
         <img src="./Images/image25.png" alt="Linkbrary 사이트 이미지" />
       </section>
     </header>
     <main>
-      <article class="content">
-        <div class="description">
-          <h2>
-            <span class="grad pink">원하는 링크</span>를<br />
-            저장하세요
-          </h2>
-          <p>
-            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-            사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-            한 공간에 저장하세요.
-          </p>
-        </div>
-        <img src="./Images/_img1.png" alt="링크 저장 이미지" />
-      </article>
-      <article class="content">
-        <img src="./Images/img2.png" alt="폴더 관리 이미지" />
-        <div class="description">
-          <h2>
-            링크를 폴더로<br />
-            <span class="grad yellow">관리</span>하세요
-          </h2>
-          <p>
-            나만의 폴더를 무제한으로 만들고<br />
-            다양하게 활용할 수 있습니다.
-          </p>
-        </div>
-      </article>
-      <article class="content">
-        <div class="description">
-          <h2>
-            저장한 링크를<br />
-            <span class="grad purple">공유</span>해 보세요.
-          </h2>
-          <p>
-            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-            공유해 보세요.
-          </p>
-        </div>
-        <img src="./Images/img3.png" alt="링크 공유 이미지" />
-      </article>
-      <article class="content">
-        <img src="./Images/_img4.png" alt="링크 검색 이미지" />
-        <div class="description">
-          <h2>
-            저장한 링크를<br />
-            <span class="grad blue">검색</span>해 보세요
-          </h2>
+      <!-- PC & Tablet content -->
+      <div class="pc tablet">
+        <article class="content">
+          <div class="description">
+            <h2>
+              <span class="grad pink">원하는 링크</span>를<br />
+              저장하세요
+            </h2>
+            <p>
+              나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
+              사고 싶은 옷, 기억하고 싶은 모든 것을<br />
+              한 공간에 저장하세요.
+            </p>
+          </div>
+          <img src="./Images/_img1.png" alt="링크 저장 이미지" />
+        </article>
+        <article class="content">
+          <img src="./Images/img2.png" alt="폴더 관리 이미지" />
+          <div class="description">
+            <h2>
+              링크를 폴더로<br />
+              <span class="grad yellow">관리</span>하세요
+            </h2>
+            <p>
+              나만의 폴더를 무제한으로 만들고<br />
+              다양하게 활용할 수 있습니다.
+            </p>
+          </div>
+        </article>
+        <article class="content">
+          <div class="description">
+            <h2>
+              저장한 링크를<br />
+              <span class="grad purple">공유</span>해 보세요.
+            </h2>
+            <p>
+              여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
+              가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
+              공유해 보세요.
+            </p>
+          </div>
+          <img src="./Images/img3.png" alt="링크 공유 이미지" />
+        </article>
+        <article class="content">
+          <img src="./Images/_img4.png" alt="링크 검색 이미지" />
+          <div class="description">
+            <h2>
+              저장한 링크를<br />
+              <span class="grad blue">검색</span>해 보세요
+            </h2>
+            <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+          </div>
+        </article>
+      </div>
+      <!-- Mobile content -->
+      <div class="mobile hidden">
+        <article class="content">
+          <h2><span class="grad pink">원하는 링크</span>를 저장하세요</h2>
+          <img src="./Images/_img1.png" alt="링크 저장 이미지" />
+          <p>나중에 읽고 싶은 글, 다시 보고 싶은 영상, 사고 싶은 옷, 기억하고 싶은 모든 것을 한 공간에 저장하세요.</p>
+        </article>
+        <article class="content">
+          <h2>링크를 폴더로 <span class="grad yellow">관리</span>하세요</h2>
+          <img src="./Images/img2.png" alt="폴더 관리 이미지" />
+          <p>나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.</p>
+        </article>
+        <article class="content">
+          <h2>저장한 링크를 <span class="grad purple">공유</span>해 보세요.</h2>
+          <img src="./Images/img3.png" alt="링크 공유 이미지" />
+          <p>여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를 공유해 보세요.</p>
+        </article>
+        <article class="content">
+          <h2>저장한 링크를 <span class="grad blue">검색</span>해 보세요</h2>
+          <img src="./Images/_img4.png" alt="링크 검색 이미지" />
           <p>중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
-        </div>
-      </article>
+        </article>
+      </div>
     </main>
     <footer>
-      <div class="info">
-        <div class="license">©codeit - 2023</div>
-        <div class="more">
-          <a href="/privacy.html">Privacy Policy</a>
-          <a href="/faq.html">FAQ</a>
+      <!-- PC & Tablet Footer -->
+      <div class="pc tablet">
+        <div class="info">
+          <div class="license">©codeit - 2023</div>
+          <div class="more">
+            <a href="/privacy.html">Privacy Policy</a>
+            <a href="/faq.html">FAQ</a>
+          </div>
+          <div class="sns">
+            <a href="https://www.facebook.com/?locale=ko_KR" target="_blank">
+              <img src="./Images/akar-icons_facebook-fill.svg" alt="페이스북 아이콘" class="facebook" />
+            </a>
+            <a href="https://twitter.com/?lang=ko" target="_blank">
+              <img src="Images/akar-icons_twitter-fill.svg" alt="트위터 아이콘" class="twitter" />
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+              <img src="./Images/akar-icons_youtube-fill.svg" alt="유튜브 아이콘" class="youtube" />
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="./Images/ant-design_instagram-filled.svg" alt="인스타그램 아이콘" class="instagram" />
+            </a>
+          </div>
         </div>
-        <div class="sns">
-          <a href="https://www.facebook.com/?locale=ko_KR" target="_blank">
-            <img src="./Images/akar-icons_facebook-fill.svg" alt="페이스북 아이콘" class="facebook" />
-          </a>
-          <a href="https://twitter.com/?lang=ko" target="_blank">
-            <img src="Images/akar-icons_twitter-fill.svg" alt="트위터 아이콘" class="twitter" />
-          </a>
-          <a href="https://www.youtube.com/" target="_blank">
-            <img src="./Images/akar-icons_youtube-fill.svg" alt="유튜브 아이콘" class="youtube" />
-          </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <img src="./Images/ant-design_instagram-filled.svg" alt="인스타그램 아이콘" class="instagram" />
-          </a>
+      </div>
+
+      <!-- Mobile Footer -->
+      <div class="mobile hidden">
+        <div class="info">
+          <div class="license-wrapper">
+            <div class="more">
+              <a href="/privacy.html">Privacy Policy</a>
+              <a href="/faq.html">FAQ</a>
+            </div>
+            <div class="license">©codeit - 2023</div>
+          </div>
+          <div class="sns">
+            <a href="https://www.facebook.com/?locale=ko_KR" target="_blank">
+              <img src="./Images/akar-icons_facebook-fill.svg" alt="페이스북 아이콘" class="facebook" />
+            </a>
+            <a href="https://twitter.com/?lang=ko" target="_blank">
+              <img src="Images/akar-icons_twitter-fill.svg" alt="트위터 아이콘" class="twitter" />
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+              <img src="./Images/akar-icons_youtube-fill.svg" alt="유튜브 아이콘" class="youtube" />
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="./Images/ant-design_instagram-filled.svg" alt="인스타그램 아이콘" class="instagram" />
+            </a>
+          </div>
         </div>
       </div>
     </footer>
