--- a/signin.html
+++ b/signin.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./CSS/sign.css" />
-    <link rel="stylesheet" href="./CSS/common.css" />
+    <link rel="stylesheet" href="./Styles/sign.css" />
+    <link rel="stylesheet" href="./Styles/common.css" />
     <title>Linkbrary</title>
   </head>
   <body>
